# numhask-massive

./: hie.yaml  numhask-massive.cabal  readme.md  stack.yaml
src/NumHask/Array/: Massive.hs
