cabal-version: 2.4
name:          numhask-massive
version:       0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) AfterTimes
license: BSD-3-Clause
homepage: https://github.com/tonyday567/numhask-massive#readme
bug-reports: https://github.com/tonyday567/numhask-massive/issues
build-type: Simple
source-repository head
  type: git
  location: https://github.com/tonyday567/numhask-massive

library
  hs-source-dirs:
    src
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  build-depends:
    adjunctions >=4.0 && <5,
    base >=4.7 && <5,
    distributive >=0.4 && <0.7,
    numhask >= 0.7 && < 0.8,
    numhask-array >= 0.8 && < 0.9,
    massiv >= 0.5.6.0,
    vector,
  exposed-modules:
    NumHask.Array.Massive
  other-modules:
  default-language: Haskell2010

